--- a/6-websockets/1-socket.io/index.html
+++ b/6-websockets/1-socket.io/index.html
@@ -14,7 +14,7 @@
 const socket = io.connect('http://localhost:8080')
 
 // Обработать событие «message» с сервера
-socket.on('greetings', msg => {
+socket.on('print', msg => {
   document.body.insertAdjacentHTML('beforeend', `<p>${msg.text}</p>`)
 })
 
